--- a/ivasi/css/style_recipe.css
+++ b/ivasi/css/style_recipe.css
@@ -797,7 +797,7 @@
     }
 
     .logo {
-        left: 2.5em;
+        /*left: 2.5em;*/
     }
 }
 
@@ -807,7 +807,7 @@
     }
 
     .logo {
-        left: 0;
+        /*left: 0;*/
     }
 }
 
