--- a/ivasi/css/style_recipe.css
+++ b/ivasi/css/style_recipe.css
@@ -1,5 +1,5 @@
 /* PRODUCT PAGE */
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .product .slider-wrap {
         display: none;
     }
@@ -8,6 +8,9 @@
 @media (max-width: 1024px) {
     .product .bg-elem {
         display: none;
+    }
+    .product .bg-footer-ship {
+        display: inline-block;
     }
 }
 
@@ -19,9 +22,12 @@
     padding: 3.8em 0 5.8em;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .recipe-ingredients {
         padding-top: 6.4em;
+    }
+    .recipe-ingredients .container {
+        width: 100%;
     }
 }
 
@@ -44,7 +50,7 @@
     margin: 0 0.3em;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .option-separator {
         display: none;
     }
@@ -59,13 +65,13 @@
     padding-top: 3.5em;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .recipe-ingredients .recipe__info {
         padding: 0;
         margin: 0;
         color: #fff;
         width: 100%;
-        margin-top: -14.3em;
+        margin-top: 3em;
         height: auto;
     }
 }
@@ -75,15 +81,18 @@
     margin: 0;
     line-height: 1.2;
     letter-spacing: -1.7px;
+    color: #01336e;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .recipe-ingredients .recipe-name {
-        width: 60%;
         font-size: 3.7em;
         font-weight: 700;
-        padding-left: 25px;
+        padding-left: .5em;
         text-transform: uppercase;
+        width: 75%;
+        margin: 0 auto;
+        text-align: center;
 
     }
 }
@@ -92,9 +101,9 @@
     margin: 2.7em 0;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .recipe-ingredients .details {
-        margin-top: 17.5em;
+        margin-top: 16.5em;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -110,7 +119,7 @@
     padding-left: 2.1em;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .recipe-ingredients .time, .recipe-ingredients .portion {
         font-size: 3em;
         color: #01336e;
@@ -125,7 +134,7 @@
     justify-content: flex-start;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .recipe-ingredients .ingredients {
         flex-direction: column;
         justify-content: flex-start;
@@ -143,13 +152,13 @@
     color: #01336e;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .recipe-ingredients .ingredients .col {
         width: 100%;
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .recipe-ingredients .ingredients .col li {
         display: flex;
         justify-content: space-between;
@@ -161,7 +170,7 @@
     padding: 0 1.8em;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .recipe-ingredients .recipe-main-photo, .recipe-ingredients .recipe-main-info {
         width: 100%;
         padding: 0;
@@ -175,7 +184,7 @@
     margin-top: 4.7937em;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .recipe-ingredients .slider-controls {
         margin: 0;
         max-width: none;
@@ -190,7 +199,7 @@
     border-radius: 1em;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .recipe-ingredients .recipe--main {
         width: 100%;
         -webkit-border-radius: 0;
@@ -214,24 +223,35 @@
         z-index: 15;
         box-shadow: 0 0.75em 0.6em 0.2em rgba(32, 40, 48, 0.65);
     }
+    .recipe-ingredients .recipe--main {
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -o-flex;
+        display: flex;
+        justify-content: center;
+    }
 
     .recipe-ingredients .recipe--main img {
-        height: auto;
-        width: 100%;
-        max-width: 100%;
-        max-height: 100%;
+        height: 100%;
+        width: auto;
+        /*max-width: 100%;*/
+        /*max-height: 100%;*/
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .recipes-navigation {
         left: 0;
         right: 0;
         margin: auto;
-        margin-top: -43.7em;
+        margin-top: -37.5em;
         position: absolute;
-        border-bottom: 1px solid #b5e7ff;
+        /*border-bottom: 1px solid #b5e7ff;*/
         padding-bottom: 1.4em;
+    }
+    .recipe-ingredients .recipe--main {
+        height: 50em;
     }
 }
 
@@ -272,7 +292,7 @@
     margin-left: 1em;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .prev-recipe, .next-recipe {
         flex-direction: row-reverse;
     }
@@ -306,7 +326,7 @@
     padding: 8em 0 10.5em 0;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .cooking-step {
         padding: 2.8em 0;
     }
@@ -335,7 +355,7 @@
 @media (max-width: 1024px) {
     .cooking-info, .cooking-photo, .cooking-step--gray .cooking-info, .cooking-step--gray .cooking-photo {
         width: 100%;
-        padding: 0 35px;
+        padding: 0 2em;
     }
 
     .cooking-info {
@@ -356,13 +376,13 @@
     height: 35.5em;
 }
 
-@media (max-width: 1024px) and (min-width: 768px) {
+@media (max-width: 1024px) and (min-width: 700px) {
     .cooking-step .recipe--main {
         width: auto;
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .cooking-step .recipe--main {
         height: 30em;
         width: 100%;
@@ -399,13 +419,13 @@
     z-index: 5;
 }
 
-@media (max-width: 1024px) and (min-width: 768px) {
+@media (max-width: 1024px) and (min-width: 700px) {
     .cooking-step__description {
         margin-bottom: 2em;
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .cooking-step__description {
         width: 100%;
         font-size: 2.2em;
@@ -475,7 +495,7 @@
     padding: 0.5em 0 2.5em;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .all-recipes {
         padding: 0.5em 0 6.25em;
     }
@@ -501,20 +521,27 @@
     padding: 0 2.315em;
 }
 
-@media (max-width: 1024px) and (min-width: 768px) {
+@media (max-width: 1024px) and (min-width: 700px) {
     .recipes-catalog {
         justify-content: space-between;
         flex-wrap: wrap;
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .recipes-catalog {
         justify-content: center;
         flex-wrap: wrap;
     }
 }
-
+.recipes-catalog {
+    -webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    -o-flex-wrap: wrap;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 .recipes-catalog .recipe {
     display: -webkit-flex;
     display: -moz-flex;
@@ -525,11 +552,23 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
+    margin-bottom: 1.5%;
     width: 30%;
 }
+.recipes-catalog .recipe:nth-child(2) {
+    margin: 0 3%;
+    margin-bottom: 1.5%;
+}
+.recipes-catalog .recipe:nth-child(4),.recipes-catalog .recipe:nth-child(5) {
+    margin-left: 1.5%;
+    margin-right: 1.5%;
+    margin-bottom: 1.5%;
+}
+.recipes-catalog .recipe.hidden {
+    display: none;
+}
 
-@media (max-width: 1024px) and (min-width: 768px) {
+@media (max-width: 1024px) and (min-width: 700px) {
     .recipes-catalog .recipe {
         width: 48%;
         flex: 0 0 auto;
@@ -537,7 +576,7 @@
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .recipes-catalog .recipe {
         width: 100%;
         flex: 0 0 auto;
@@ -549,7 +588,7 @@
     display: none;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .recipes-catalog .recipe .details {
         display: flex;
         justify-content: space-around;
@@ -566,7 +605,7 @@
     min-height: 2.8em;
 }
 
-@media (max-width: 1024px) and (min-width: 768px) {
+@media (max-width: 1024px) and (min-width: 700px) {
     .recipes-catalog .recipe__caption {
         min-height: auto;
         margin-bottom: 0.5em;
@@ -574,7 +613,7 @@
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .recipes-catalog .recipe__caption {
         min-height: auto;
         margin-bottom: 0.5em;
@@ -593,7 +632,7 @@
     text-align: center;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .all-recipes .recipes-more {
         padding: 0 35px;
     }
@@ -612,25 +651,47 @@
     margin-bottom: 0.55em;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .all-products .section-title {
-        margin-bottom: 1.25em;
+        margin-bottom: .7em;
     }
 }
 
 .all-products-slider-wrap {
     width: 100%;
 }
-
+.all-products .slick-track {
+    height: 54em;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    -ms-align-items: flex-end;
+    align-items: flex-end;
+}
 .all-products .product-slide {
     text-align: center;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    -webkit-flex-direction: column;
+    -moz-flex-direction: column;
+    -ms-flex-direction: column;
+    -o-flex-direction: column;
+    flex-direction: column;
+    -ms-align-items: center;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 .all-products .product-slide-inner .product__rating {
     display: none;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .all-products .product-slide-inner {
         display: -webkit-flex;
         display: -moz-flex;
@@ -681,10 +742,10 @@
     margin-bottom: 0;
 }
 
-@media (max-width: 768px) {
-    .all-products .product-slide.slick-current .product__item {
-        width: 25.742em;
-        height: 36.39em;
+@media (max-width: 700px) {
+    .all-products .product-slide .product__item {
+        width: 21em;
+        height: auto;
         margin-top: 0;
     }
 }
@@ -699,7 +760,7 @@
     margin-bottom: 0.84175em;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .all-products .product__title {
         font-size: 2.6em;
     }
@@ -719,7 +780,7 @@
     margin: 0;
 }
 
-@media (max-width: 1024px) and (min-width: 768px) {
+@media (max-width: 1024px) and (min-width: 700px) {
     .all-products .slider-controls
 }
 
@@ -727,7 +788,7 @@
     margin-top: 5.8em;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .all-products-controls {
         margin-top: 2.6em;
     }
@@ -742,7 +803,7 @@
     right: 4.5em;
 }
 
-@media (max-width: 1024px) and (min-width: 768px) {
+@media (max-width: 1024px) and (min-width: 700px) {
     .all-products-controls {
         margin-top: 0;
     }
@@ -761,7 +822,7 @@
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .all-products-controls .row {
         padding: 0 35px;
     }
@@ -770,6 +831,11 @@
         width: 100%;
         position: relative;
         margin: 1.25em 0;
+    }
+    .all-products .btn--promo-buy {
+        position: relative;
+        right: auto;
+        left: auto;
     }
 }
 
@@ -817,19 +883,19 @@
     }
 }
 
-@media (max-width: 1024px) and (min-width: 768px) {
+@media (max-width: 1024px) and (min-width: 700px) {
     .container {
         max-width: 740px;
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .container {
         max-width: 100%;
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .product .animated {
         /*CSS transitions*/
         -o-transition-property: none !important;
@@ -850,4 +916,67 @@
         -ms-animation: none !important;
         animation: none !important;
     }
+}
+
+@media (max-width: 700px) {
+    .all-products {
+        padding-bottom: 14em;
+    }
+    .all-products-slider-wrap {
+        width: 100vw;
+        margin-left: 0% !important;
+
+    }
+    .all-products .slick-list {
+        padding: 0 5.5em !important;
+        padding-bottom: 8em !important;
+        padding-top: 1em !important;
+        height: inherit !important;
+    }
+    .all-products .product-slide {
+        display: -webkit-flex !important;
+        display: -moz-flex !important;
+        display: -ms-flex !important;
+        display: -o-flex !important;
+        display: flex !important;
+        align-items: center;
+        justify-content: flex-start;
+    }
+    .all-products .product-slide-inner {
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -o-flex;
+        display: flex;
+        -webkit-flex-direction: column;
+        -moz-flex-direction: column;
+        -ms-flex-direction: column;
+        -o-flex-direction: column;
+        flex-direction: column;
+        width: 90%;
+        box-shadow: 0 0 13px 6px rgba(0, 0, 0, .2);
+        margin: 2em auto;
+        border-radius: 1em;
+        background-image: url(../img/bg-promo.png);
+        background-position: center top;
+        -webkit-background-size: cover;
+        background-size: cover;
+        padding-top: 4em;
+        width: 95% !important;
+        transform: translateX(-5.5em);
+        padding-top: 7em !important;
+    }
+    .all-products .product-slide > div {
+        width: 100%;
+    }
+/*    .all-products .product-slide.slick-current .product__item {
+        position: relative;
+        display: block;
+        height: auto;
+        z-index: 10;
+        text-align: center;
+        margin: 0 auto;
+        padding: 0;
+        width: 21em;
+    }*/
 }
