Добавлен форшмак, прописаны altы

--- a/ivasi/css/style.css
+++ b/ivasi/css/style.css
@@ -361,6 +361,7 @@ header .container {
 .slick-dotted.slick-slider {
     margin: 0;
     height: inherit;
+    margin-bottom: 0 !important;
 }
 
 .burger_wrapper {
