--- a/ivasi/css/style_recipe.css
+++ b/ivasi/css/style_recipe.css
@@ -134,16 +134,22 @@
     justify-content: flex-start;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 1024px) {
     .recipe-ingredients .ingredients {
         flex-direction: column;
         justify-content: flex-start;
-        padding: 0 35px;
         /*margin-top: 15em;*/
         margin-top: 0;
     }
+    .recipe-ingredients .ingredients .col {
+        width: 100% !important;
+    }
 }
-
+@media (max-width: 700px) {
+    .recipe-ingredients .ingredients {
+        padding: 0 35px;
+    }
+}
 .recipe-ingredients .ingredients .col {
     font-size: 2.35em;
     line-height: 1.5;
