--- a/icebreakers/css/style.css
+++ b/icebreakers/css/style.css
@@ -12,8 +12,8 @@
     html {
         width: 100vw;
         height: 100vh;
-        min-width: 800px;
-        min-height: 600px;
+        min-width: 990px;
+        min-height: 800px;
     }
     
     body {
@@ -25,8 +25,8 @@
         background-repeat: no-repeat;
         width: 100vw;
         height: 100vh;
-        min-width: 800px;
-        min-height: 600px;
+        min-width: 990px;
+        min-height: 800px;
     }
     
     .logo--mobile,
@@ -38,17 +38,18 @@
     .container {
         /* background: rgb(166 71 197 / 53%); */
         position: relative;
-        width: 800px;
-        height: 600px;
+        width: 990px;
+        height: 800px;
         top: 50%;
         transform: translateY(-50%);
         overflow: hidden;
         z-index: 5;
+        overflow: hidden;
     }
     
     .mountains {
         position: absolute;
-        width: 830px;
+        width: 1020px;
         left: 50%;
         z-index: -2;
         top: 50%;
@@ -57,7 +58,7 @@
     
     .footer {
         position: absolute;
-        width: 830px;
+        width: 1020px;
         left: 50%;
         transform: translate(-50%, -50%);
         top: 77%;
@@ -66,8 +67,8 @@
     
     .ships {
         position: absolute;
-        width: 500px;
-        left: 52%;
+        width: 650px;
+        left: 50%;
         top: 56.5%;
         transform: translate(-50%, -50%);
     }
@@ -77,8 +78,8 @@
         background: #fff;
         width: 100vw;
         height: 50%;
-        min-width: 800px;
-        min-height: 300px;
+        min-width: 990px;
+        min-height: 400px;
         bottom: 0;
         z-index: 1;
     }
@@ -107,7 +108,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 15%;
+        width: 16%;
         padding: 5px;
     }
     
@@ -116,7 +117,7 @@
         width: 100%;
         height: 50%;
         flex-direction: column;
-        align-items: flex-start;
+        /* align-items: flex-end; */
         justify-content: flex-start;
         /* border: thin solid #000; */
     }
@@ -126,25 +127,25 @@
         width: 100%;
         height: 50%;
         flex-direction: column;
-        align-items: flex-start;
         justify-content: flex-end;
-        /* border: thin solid #000; */
     }
     
     .column-left-1 .column-top,
-    .column-left-2 .column-top {}
-    
+    .column-left-2 .column-top,
     .column-left-1 .column-bottom,
-    .column-left-2 .column-bottom {}
+    .column-left-2 .column-bottom {
+        align-items: flex-end;
+    }
     
     .column-right-1 .column-top,
-    .column-right-2 .column-top {}
-    
+    .column-right-2 .column-top,
     .column-right-1 .column-bottom,
-    .column-right-2 .column-bottom {}
+    .column-right-2 .column-bottom {
+        align-items: flex-start;
+    }
     
     .column-game {
-        width: 30%;
+        width: 35%;
     }
     
     .column-all {
@@ -252,19 +253,19 @@
     }
     
     .link {
-        display: flex;
+        display: block;
         border: 1px solid #fff;
         background: #000;
         box-shadow: 0 10px 20px 0 #222;
-        height: 36px;
         border-radius: 7px;
         margin-top: 10px;
         overflow: hidden;
-        text-align: center;
         transition: 0.2s;
-        align-items: center;
-        padding: 5px;
+        width: 85%;
+        padding: 5px 0;
         justify-content: center;
+        max-height: 50px;
+        text-align: center;
     }
     
     .link:hover {
@@ -273,13 +274,13 @@
     
     .link img {
         display: block;
-        width: 100%;
+        height: 100%;
+        max-height: 50px;
     }
     
     .link--vk {
-        width: 33%;
-    }
-    
+        max-height: 50px
+    }    
     .link--vk img {}
     
     .preloader {
@@ -438,7 +439,7 @@
         flex-direction: column;
     }
     
-    @media screen and (min-width:801px) and (max-width:1024px) {
+    @media screen and (min-width:991px) and (max-width:1280px) {
         .container {
             width: 100%;
             font-size: 1.5vh;
@@ -455,9 +456,9 @@
             width: 55%;
             top: 53.55%;
         }
-        .link {
-            height: 45px;
-        }
+        /* .link { */
+            /* height: 45px; */
+        /* } */
         @media screen and (min-height:601px) and (max-height: 1020px) {
             body {
                 overflow: hidden;
@@ -471,12 +472,12 @@
         }
         @media screen and (min-height: 801px) and (max-height: 1020px) {
             .columns {
-                padding: 8em 0;
+                padding: 2em 0;
             }
         }
     }
     
-    @media screen and (min-width: 1025px) and (max-width:1280px) {
+    @media screen and (min-width: 1280px) and (max-width:1600px) {
         .container {
             width: 100%;
             font-size: 1.5vh;
@@ -506,12 +507,12 @@
         }
         @media screen and (min-height: 801px) and (max-height: 1020px) {
             .columns {
-                padding: 8em 0;
+                padding: 2em 0;
             }
         }
     }
     
-    @media screen and (min-width: 1281px) and (max-width: 1600px) {}
+    @media screen and (min-width: 1601px) {}
     /* .container {} */
     /*
         body {
